src/main/java/com/example/writemymail/error/UserNotFoundException.java
package com.example.writemymail.error;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }
}
